# PaperScissorsRock

./: CMakeLists.txt  README.md  main.cpp
Game/: Game.cpp  Game.h  Rules.h
